# parametric_ibp_lf_reducer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  PROMPT_ADD_NOTEBOOK_EXAMPLES_FOR_CLAUDE_RU.md  PROMPT_CORRECT_STAR_EXAMPLES_FOR_CLAUDE_RU.md  PROMPT_FOR_CLAUDE_CODE_RU.md  README.md  README.ru.md  TASK.md  project_manifest.json  pyproject.toml
.tmp_accept/: tiny_diag.json  tiny_result.m
docs/: 00_READ_ME_FIRST_RU.md  01_clean_spec_ru.md  02_method_review_ru.md  03_validation_cases_ru.md  04_notebook_examples_addendum_ru.md  05_star_examples_policy_correction_ru.md  ADAPTIVE_SEARCH.md  ADAPTIVE_SEARCH.ru.md  ADAPTIVE_SEARCH_QA.md  FINAL_QA.md  FINITE_NUMERATOR_BASIS_DESIGN.md  LICENSE_NOTE.md  NEW_PROBLEM_WORKFLOW.md  NUMBA_RREF_QA.md  PERFORMANCE.md  RREF_BACKEND_PLAN.md  RREF_NATIVE_BACKEND_DESIGN.md  USAGE.md  USAGE.ru.md
examples/: Examples_for_IBP_parametric.nb  d4_cli_example_input.wl.txt  d4_explicit_family.wl.txt  example4_star_corrected_input.wl.txt  example4_star_input.wl.txt  external_int1_corrected_input.wl.txt  external_int2_dimensionless_input.wl.txt  external_int2_source_reference.wl.txt  id3example3_x4_squared_candidate_family.wl.txt  id4example2_candidate_explicit_family.wl.txt  notebook_example1_d4_alt_explicit_family.wl.txt  notebook_example2_n3_five_term_explicit_family.wl.txt  notebook_star_example3_known_value_input.wl.txt  notebook_star_example4_known_value_input.wl.txt  tiny_success_expected_notes.md  tiny_success_input.wl.txt
notes/: D4_STATUS.md  EXTERNAL_INT1_LAURENT_AUDIT.md  EXTERNAL_INT2_AUDIT.md  HANDOFF.md  PERF_STATUS.md  (+10 more)
(+129 files in other folders)
